--- a/bin/gui/view/ViewCliente.fxml
+++ b/bin/gui/view/ViewCliente.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="50000.0" maxWidth="50000.0" minHeight="0.0" minWidth="0.0" prefHeight="600.0" prefWidth="776.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewClienteController">
+<AnchorPane maxHeight="50000.0" maxWidth="50000.0" minHeight="0.0" minWidth="0.0" prefHeight="600.0" prefWidth="776.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="gui.controllers.ViewClienteController">
    <children>
       <TextField fx:id="txtCpfCliente" layoutX="305.0" layoutY="87.0" promptText="CPF do cliente" />
       <Label layoutX="267.0" layoutY="92.0" text="CPF:" />
@@ -35,7 +35,6 @@
       </TableView>
       <Button fx:id="btExcluiCliente" layoutX="365.0" layoutY="554.0" mnemonicParsing="false" onAction="#excluirCliente" text="Excluir" />
       <Label layoutX="107.0" layoutY="529.0" prefHeight="25.0" prefWidth="579.0" text="Selecione os funcionários na coluna &quot;Excluir&quot; e aperte o botão abaixo para deleta-los!" />
-      <Button fx:id="btVoltar" layoutX="12.0" layoutY="9.0" mnemonicParsing="false" onAction="#onBtVoltarAction" prefHeight="25.0" prefWidth="70.0" text="Voltar" />
       <Line endX="1025.0" endY="6.0" layoutX="-249.0" layoutY="39.0" startX="249.0" startY="6.0" stroke="#827f7f" />
       <Button fx:id="btAtualizaCliente" layoutX="661.0" layoutY="9.0" mnemonicParsing="false" onAction="#atualizaCadastro" prefHeight="25.0" prefWidth="101.0" text="Atualizar dados" />
    </children>
