--- a/src/gui/view/View.fxml
+++ b/src/gui/view/View.fxml
@@ -147,9 +147,9 @@
               <MenuItem mnemonicParsing="false" text="Delete" />
             </items>
           </Menu>
-          <Menu mnemonicParsing="false" text="Ajuda">
+          <Menu mnemonicParsing="false" onAction="#onBtAbreSobreAction" text="Ajuda">
             <items>
-              <MenuItem mnemonicParsing="false" text="About" />
+              <MenuItem mnemonicParsing="false" text="Sobre" />
             </items>
           </Menu>
         </menus>
