--- a/src/gui/view/View.fxml
+++ b/src/gui/view/View.fxml
@@ -22,10 +22,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewController">
    <children>
-      <Button fx:id="btCriaFuncionario" layoutX="10.0" layoutY="43.0" mnemonicParsing="false" onAction="#onBtCriaFuncionarioAction" prefHeight="45.0" prefWidth="103.0" text="Funcionários" />
       <Line endX="-100.0" endY="673.0" layoutX="223.0" layoutY="31.0" startX="-100.0" startY="-5.000007629394531" stroke="#827f7f" />
-      <Button fx:id="btCriaCliente" layoutX="10.0" layoutY="98.0" mnemonicParsing="false" onAction="#onBtCriaClienteAction" prefHeight="45.0" prefWidth="103.0" text="Clientes" />
-      <Button fx:id="btCaixa" layoutX="10.0" layoutY="153.0" mnemonicParsing="false" onAction="#onBtAbreCaixaAction" prefHeight="45.0" prefWidth="103.0" text="Caixa" />
       <Pane layoutX="144.0" layoutY="64.0">
          <children>
             <TableView fx:id="tvFuncionario" layoutX="13.0" layoutY="41.0" prefHeight="375.0" prefWidth="274.0" style="-fx-border-color: #827f7f;">
@@ -154,5 +151,22 @@
           </Menu>
         </menus>
       </MenuBar>
+      <GridPane layoutX="14.0" layoutY="36.0" prefHeight="242.0" prefWidth="100.0" vgap="10.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Button fx:id="btCriaFuncionario" mnemonicParsing="false" onAction="#onBtCriaFuncionarioAction" prefHeight="89.0" prefWidth="100.0" text="Funcionários" />
+            <Button fx:id="btCriaCliente" mnemonicParsing="false" onAction="#onBtCriaClienteAction" prefHeight="90.0" prefWidth="100.0" text="Clientes" GridPane.rowIndex="1" />
+            <Button fx:id="btCaixa" mnemonicParsing="false" onAction="#onBtAbreCaixaAction" prefHeight="65.0" prefWidth="100.0" text="Caixa" GridPane.rowIndex="2" />
+            <Button fx:id="btPagamento" mnemonicParsing="false" onAction="#onBtAbrePagamentoAction" prefHeight="72.0" prefWidth="100.0" text="Pagamento" GridPane.rowIndex="3" />
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
