--- a/src/gui/view/ViewFuncionario.fxml
+++ b/src/gui/view/ViewFuncionario.fxml
@@ -6,22 +6,19 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="600.0" maxWidth="500.0" minHeight="0.0" minWidth="0.0" prefHeight="600.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewFuncionarioController">
    <children>
-      <TextField fx:id="txtIdFuncionario" layoutX="174.0" layoutY="105.0" promptText="ID fo funcionário" />
-      <Label layoutX="149.0" layoutY="109.0" text="ID:" />
-      <TextField fx:id="txtNomeFuncionario" layoutX="174.0" layoutY="141.0" promptText="Nome do Funcionário" />
-      <Label layoutX="127.0" layoutY="145.0" text="Nome:" />
-      <TextField fx:id="txtSalarioFuncionario" layoutX="175.0" layoutY="175.0" promptText="Salário do Funcionário" />
-      <Label layoutX="120.0" layoutY="180.0" prefHeight="17.0" prefWidth="50.0" text="Salário:" />
-      <Button fx:id="btCriaFuncionario" layoutX="361.0" layoutY="176.0" mnemonicParsing="false" onAction="#onBtCriaFuncionarioAction" text="Criar" />
-      <Label layoutX="120.0" layoutY="66.0" text="Digite os dados do novo funcionario">
+      <Label layoutX="130.0" layoutY="64.0" text="Digite os dados do novo funcionario">
          <font>
             <Font name="Arial Bold" size="15.0" />
-         </font></Label>
+         </font>
+      </Label>
       <TableView fx:id="tvFuncionario" layoutX="9.0" layoutY="232.0" prefHeight="297.0" prefWidth="481.0">
         <columns>
           <TableColumn fx:id="colunaId" minWidth="0.0" prefWidth="84.0" text="ID" />
@@ -34,5 +31,23 @@
       <Label layoutX="23.0" layoutY="529.0" prefHeight="25.0" prefWidth="454.0" text="Selecione os funcionários na coluna &quot;Excluir&quot; e aperte o botão abaixo para deleta-los!" />
       <Line endX="650.0" endY="6.0" layoutX="-150.0" layoutY="41.0" startX="150.2928466796875" startY="6.0" stroke="#827f7f" />
       <Button fx:id="btAtualizar" layoutX="406.0" layoutY="12.0" mnemonicParsing="false" onAction="#atualizaFuncionario" prefHeight="26.0" prefWidth="80.0" text="Atualizar" />
+      <GridPane layoutX="161.0" layoutY="107.0" vgap="5.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="50.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="159.0" minWidth="10.0" prefWidth="150.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label prefHeight="17.0" prefWidth="36.0" text="CPF:" />
+            <Label text="Nome:" GridPane.rowIndex="1" />
+            <TextField fx:id="txtNomeFuncionario" promptText="Nome do Funcionário" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="txtIdFuncionario" prefHeight="23.0" prefWidth="117.0" promptText="CPF fo funcionário" GridPane.columnIndex="1" />
+            <Button fx:id="btCriaFuncionario" mnemonicParsing="false" onAction="#onBtCriaFuncionarioAction" text="Criar" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
