--- a/bin/gui/view/ViewCliente.fxml
+++ b/bin/gui/view/ViewCliente.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -39,23 +40,25 @@
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="221.0" minWidth="10.0" prefWidth="221.0" />
         </columnConstraints>
         <rowConstraints>
+          <RowConstraints />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <TextField fx:id="txtCpfCliente" prefHeight="25.0" prefWidth="177.0" promptText="CPF do cliente" GridPane.columnIndex="1" />
-            <TextField fx:id="txtNomeCliente" promptText="Nome do cliente" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="txtEmailCliente" promptText="Email do cliente" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField fx:id="txtTelefoneCliente" promptText="Telefone do cliente" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <Label prefHeight="17.0" prefWidth="67.0" text="Telefone:" GridPane.rowIndex="4" />
-            <Label prefHeight="17.0" prefWidth="43.0" text="Email:" GridPane.rowIndex="2" />
-            <Label text="Nome:" GridPane.rowIndex="1" />
-            <Label text="CPF:" />
-            <Label text="Rede Social:" GridPane.rowIndex="3" />
-            <TextField fx:id="txtRedeSocialCliente" promptText="Rede Social do cliente" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="txtCpfCliente" prefHeight="25.0" prefWidth="177.0" promptText="CPF do cliente" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="txtNomeCliente" promptText="Nome do cliente" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="txtEmailCliente" promptText="Email do cliente" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="txtTelefoneCliente" promptText="Telefone do cliente" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <Label prefHeight="17.0" prefWidth="67.0" text="Telefone:" GridPane.rowIndex="5" />
+            <Label prefHeight="17.0" prefWidth="43.0" text="Email:" GridPane.rowIndex="3" />
+            <Label text="Nome:" GridPane.rowIndex="2" />
+            <Label text="CPF:" GridPane.rowIndex="1" />
+            <Label text="Rede Social:" GridPane.rowIndex="4" />
+            <TextField fx:id="txtRedeSocialCliente" promptText="Rede Social do cliente" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <CheckBox fx:id="cbGenerico" mnemonicParsing="false" onAction="#isGeneric" text="Genérico" GridPane.columnIndex="1" />
          </children>
       </GridPane>
    </children>
