--- a/src/gui/view/ViewAgenda.fxml
+++ b/src/gui/view/ViewAgenda.fxml
@@ -6,37 +6,79 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="346.0" prefWidth="345.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewAgendaController">
    <children>
-      <TextField fx:id="txtFuncionario" layoutX="122.0" layoutY="14.0" prefHeight="25.0" prefWidth="174.0" />
-      <TextField fx:id="txtCliente" layoutX="122.0" layoutY="49.0" />
-      <DatePicker fx:id="dpData" disable="true" layoutX="122.0" layoutY="81.0" prefHeight="25.0" prefWidth="149.0" style="-fx-opacity: 1;" />
-      <Button fx:id="btAgendar" layoutX="269.0" layoutY="311.0" mnemonicParsing="false" onAction="#onBtAgendarAction" text="Agendar" />
-      <Label layoutX="72.0" layoutY="52.0" text="Cliente:" />
-      <Label layoutX="84.0" layoutY="86.0" text="Data:" />
-      <Label layoutX="134.0" layoutY="114.0" text="Horários">
+      <Label layoutX="221.0" layoutY="114.0" text="Horários">
          <font>
             <Font name="System Bold" size="20.0" />
          </font>
       </Label>
-      <CheckBox fx:id="cb12" layoutX="60.0" layoutY="150.0" mnemonicParsing="false" text="12:00" />
-      <CheckBox fx:id="cb12_3" layoutX="60.0" layoutY="175.0" mnemonicParsing="false" text="12:30" />
-      <CheckBox fx:id="cb13" layoutX="60.0" layoutY="200.0" mnemonicParsing="false" text="13:00" />
-      <CheckBox fx:id="cb13_3" layoutX="60.0" layoutY="224.0" mnemonicParsing="false" text="13:30" />
-      <CheckBox fx:id="cb14" layoutX="60.0" layoutY="249.0" mnemonicParsing="false" text="14:00" />
-      <CheckBox fx:id="cb14_3" layoutX="59.0" layoutY="274.0" mnemonicParsing="false" text="14:30" />
-      <CheckBox fx:id="cb15" layoutX="151.0" layoutY="150.0" mnemonicParsing="false" text="15:00" />
-      <CheckBox fx:id="cb15_3" layoutX="151.0" layoutY="175.0" mnemonicParsing="false" text="15:30" />
-      <CheckBox fx:id="cb16" layoutX="151.0" layoutY="200.0" mnemonicParsing="false" text="16:00" />
-      <CheckBox fx:id="cb16_3" layoutX="151.0" layoutY="224.0" mnemonicParsing="false" text="16:30" />
-      <CheckBox fx:id="cb17" layoutX="151.0" layoutY="249.0" mnemonicParsing="false" text="17:00" />
-      <CheckBox fx:id="cb17_3" layoutX="151.0" layoutY="274.0" mnemonicParsing="false" text="17:30" />
-      <CheckBox fx:id="cb18" layoutX="236.0" layoutY="150.0" mnemonicParsing="false" text="18:00" />
-      <Label layoutX="48.0" layoutY="19.0" text="Funcionário:" />
-      <Line endX="-181.0" endY="-47.5" layoutX="183.0" layoutY="161.0" startX="159.5" startY="-47.5" stroke="#827f7f" />
-      <Line endX="-181.0" endY="-47.5" layoutX="183.0" layoutY="349.0" startX="159.5" startY="-47.5" stroke="#827f7f" />
+      <Line endX="-181.0" endY="-47.5" layoutX="183.0" layoutY="161.0" startX="336.0" startY="-47.5" stroke="#827f7f" />
+      <Line endX="-181.0" endY="-47.5" layoutX="183.0" layoutY="349.0" startX="336.5" startY="-47.5" stroke="#827f7f" />
+      <GridPane layoutX="131.0" layoutY="14.0" prefHeight="90.0" prefWidth="277.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="133.0" minWidth="10.0" prefWidth="88.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="203.0" minWidth="10.0" prefWidth="189.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="40.0" minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <TextField fx:id="txtFuncionario" prefHeight="25.0" prefWidth="174.0" GridPane.columnIndex="1" />
+            <Label text="Funcionário:" />
+            <Label text="Cliente:" GridPane.rowIndex="1" />
+            <TextField fx:id="txtCliente" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <DatePicker fx:id="dpData" disable="true" prefHeight="25.0" prefWidth="149.0" style="-fx-opacity: 1;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label text="Data:" GridPane.rowIndex="2" />
+         </children>
+      </GridPane>
+      <GridPane layoutX="19.0" layoutY="143.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <CheckBox fx:id="cb8" mnemonicParsing="false" text="8:00" />
+            <CheckBox fx:id="cb8_3" mnemonicParsing="false" text="8:30" GridPane.rowIndex="1" />
+            <CheckBox fx:id="cb9" mnemonicParsing="false" text="9:00" GridPane.rowIndex="2" />
+            <CheckBox fx:id="cb9_3" mnemonicParsing="false" text="9:30" GridPane.rowIndex="3" />
+            <CheckBox fx:id="cb10" mnemonicParsing="false" text="10:00" GridPane.rowIndex="4" />
+            <CheckBox fx:id="cb10_3" mnemonicParsing="false" text="10:30" GridPane.columnIndex="1" />
+            <CheckBox fx:id="cb11" mnemonicParsing="false" text="11:00" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <CheckBox fx:id="cb11_3" mnemonicParsing="false" text="11:30" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <CheckBox fx:id="cb12" mnemonicParsing="false" text="12:00" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <CheckBox fx:id="cb12_3" mnemonicParsing="false" text="12:30" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <CheckBox fx:id="cb13" mnemonicParsing="false" text="13:00" GridPane.columnIndex="2" />
+            <CheckBox fx:id="cb13_3" mnemonicParsing="false" text="13:30" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <CheckBox fx:id="cb14" mnemonicParsing="false" text="14:00" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <CheckBox fx:id="cb14_3" mnemonicParsing="false" text="14:30" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <CheckBox fx:id="cb15" mnemonicParsing="false" text="15:00" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+            <CheckBox fx:id="cb15_3" mnemonicParsing="false" text="15:30" GridPane.columnIndex="3" />
+            <CheckBox fx:id="cb16" mnemonicParsing="false" text="16:00" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+            <CheckBox fx:id="cb16_3" mnemonicParsing="false" text="16:30" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+            <CheckBox fx:id="cb17" mnemonicParsing="false" text="17:00" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+            <CheckBox fx:id="cb17_3" mnemonicParsing="false" text="17:30" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+            <CheckBox fx:id="cb18" mnemonicParsing="false" text="18:00" GridPane.columnIndex="4" />
+            <Button fx:id="btAgendar" mnemonicParsing="false" onAction="#onBtAgendarAction" prefHeight="26.0" prefWidth="91.0" text="Agendar" GridPane.columnIndex="4" GridPane.rowIndex="4" />
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
